2017.08.11

move some functions to PeakSegPipeline: mclapply funs, bigwig funs.

halve test time for CRAN submission -- 30 minutes is way too long. to
do that we remove test-functions-real-data.R for the CRAN submission:

                               f seconds
1:      test-functions-trivial.R   0.077
2:    test-functions-converted.R   0.423
3:     test-functions-features.R   0.526
4:   test-functions-likelihood.R   2.928
5:       test-functions-binSum.R  29.041
6:     test-functions-no-zeros.R  38.127
7: test-functions-PeakSegJoint.R  56.224
8:    test-functions-real-data.R 674.881

2017.08.08

Remove free/malloc for seg[123]_mean_vec in C code, instead use
pointers from one allocMatrix which is returned in the model_list, and
can be used to quantify the peak height relative to nearby background.

if(interactive()) to avoid slow CRAN check on
example(PeakSegJointHeuristic)

2017.06.20

Import penaltyLearning, remove interval regression code.

2017.05.05

Suggest penaltyLearning, used in pipeline.R with colSums features.

Use geom_rect rather than geom_step in problem.joint.plot, to avoid an
error when the data set has only 1 row.

2017.04.20

better caching: readCoverage etc.

problem.joint.predict.job with list column.

2017.02.27

multiClusterPeaks is a new R/C function that clusters peaks into
overlapping groups, with at most 1 peak per sample (in contrast,
clusterPeaks allows more than one per per sample).

problem.joint.predict.many now prints progress 1 / N joint prediction
problems, and skips a joint prediction problem if its peaks.bed file
already exists (allows restarting).

problem.joint.targets.train now prints progress 1 / N labeled joint
problems.

problem.joint now sets first and last chromStart to corresponding
problem start/end, before giving the data to ProfileList and
PeakSegJoint. This ensures that the peak start/end are never outside
of the problem start/end.

2016.11.01

New functions problem.joint.predict.many, problem.joint.targets.train,