@@ -82,15 +82,6 @@ void binSum_interface(
   }
 }
 
-// TODO: for each malloc, check for out of memory error.
-void * malloc_or_error(size_t size, const char * msg){
-  void * ptr = malloc(size);
-  if(ptr == 0){
-    //memory_error();
-  }
-  return ptr;
-}
-
 void 
 Ralloc_profile_list
 (SEXP profile_list_sexp, 
@@ -122,7 +113,7 @@ free_profile_list
 }
 
 SEXP allocPeakSegJointModelList(){
-  return allocVector(VECSXP, 10);
+  return allocVector(VECSXP, 11);
 }
 
 void
@@ -135,12 +126,12 @@ Ralloc_model_struct
     model_vec_sexp, data_start_end_sexp,
     n_bins_sexp, bases_per_bin_sexp, bin_factor_sexp,
     bin_start_end_sexp, sample_mean_sexp, last_cumsum_sexp,
-    mean_mat_sexp;
+    mean_mat_sexp, loss_change_sexp;
   int model_i;
   int n_profiles = model_list->n_models - 1;
   struct PeakSegJointModel *model;
 
-  PROTECT(model_list_names = allocVector(STRSXP, 10));
+  PROTECT(model_list_names = allocVector(STRSXP, 11));
   SET_STRING_ELT(model_list_names,0,mkChar("models"));
   SET_STRING_ELT(model_list_names,1,mkChar("bin_start_end"));
   SET_STRING_ELT(model_list_names,2,mkChar("sample_mean_vec"));
@@ -151,6 +142,7 @@ Ralloc_model_struct
   SET_STRING_ELT(model_list_names,7,mkChar("bin_factor"));
   SET_STRING_ELT(model_list_names,8,mkChar("data_start_end"));
   SET_STRING_ELT(model_list_names,9,mkChar("mean_mat"));
+  SET_STRING_ELT(model_list_names,10,mkChar("loss_change_vec"));
   namesgets(model_list_sexp, model_list_names);
   UNPROTECT(1);
 
@@ -164,6 +156,7 @@ Ralloc_model_struct
   PROTECT(bin_factor_sexp = allocVector(INTSXP, 1));
   PROTECT(data_start_end_sexp = allocVector(INTSXP, 2));
   PROTECT(mean_mat_sexp = allocMatrix(REALSXP, n_profiles, 3));
+  PROTECT(loss_change_sexp = allocVector(REALSXP, n_profiles));
   SET_VECTOR_ELT(model_list_sexp,0,model_vec_sexp);
   SET_VECTOR_ELT(model_list_sexp,1,bin_start_end_sexp);
   SET_VECTOR_ELT(model_list_sexp,2,sample_mean_sexp);
@@ -174,6 +167,7 @@ Ralloc_model_struct
   SET_VECTOR_ELT(model_list_sexp, 7, bin_factor_sexp);
   SET_VECTOR_ELT(model_list_sexp, 8, data_start_end_sexp);
   SET_VECTOR_ELT(model_list_sexp, 9, mean_mat_sexp);
+  SET_VECTOR_ELT(model_list_sexp, 10, loss_change_sexp);
   model_list->bin_start_end = INTEGER(bin_start_end_sexp);
   model_list->sample_mean_vec = REAL(sample_mean_sexp);
   model_list->last_cumsum_vec = INTEGER(last_cumsum_sexp);
@@ -183,7 +177,8 @@ Ralloc_model_struct
   model_list->bin_factor = INTEGER(bin_factor_sexp);
   model_list->data_start_end = INTEGER(data_start_end_sexp);
   model_list->mean_mat = REAL(mean_mat_sexp);
-  UNPROTECT(10);
+  model_list->loss_change_vec = REAL(loss_change_sexp);
+  UNPROTECT(11);
 
   SEXP loss_sexp, peak_start_end_sexp, samples_with_peaks_sexp,
     left_cumsum_sexp, right_cumsum_sexp, 
